--- a/1_html/index.html
+++ b/1_html/index.html
@@ -2,6 +2,7 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif|PT+Sans" rel="stylesheet">
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<link rel="shortcut icon" type="image/x-icon" href="https://cdn0.iconfinder.com/data/icons/HTML5/512/HTML_Logo.png">
 	<link rel="stylesheet" href="../css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>HTML + CSS 101</title>
