inserted link from page 2 to 3

--- a/2_html/index.html
+++ b/2_html/index.html
@@ -176,12 +176,14 @@
 				<p><em>Nav</em>: identifica navegações principais (menu).</p>
 				<p><em>Article</em>: conteúdo independente, que pode ser usado fora da página. Post de blog, notícia, conteúdos em geral.</p>
 				<p><em>Section</em>: agrupa conteúdos com mesmo tema</p>
+				<p><em>Aside</em>: para sidebars ou curtas explicações (autor do texto)</p>
 				<p><em>Footer</em>: autoexplicativo</p>
 
 				</p>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
+			<a href="javascript:" title='3_links' class="next">Parte 3</a>
 		</section>
 
 	</main>
