part 6 included and table of content

--- a/5_css/index.html
+++ b/5_css/index.html
@@ -147,34 +147,7 @@
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
-		</section>
-
-		<section>
-			<div class="content">
-				<h1>O que dá pra fazer com isso que eu aprendi?</h1>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-		<section>
-			<div class="content">
-			<p>Podemos usar a relação de child e parent pra especificarmos o que vai ser estilizado.</p>
-				<code>
-					<span class="selector">p {</span><br>
-					<span class="property">line-height</span>: 
-					<span class="value">1.5</span>;<br>
-					<span class="selector">}</span>
-					<br><br>
-					<span class="selector">article p {</span><br>
-					<span class="property">line-height</span>: 
-					<span class="value">1.8</span>;<br>
-					<span class="selector">}</span>
-				</code>
-				<p>Nesse código, todos os parágrafos vão ter a entrelinha com altura 1.5, exceto os que estiverem dentro de um <span class="tag">&lt;article></span>, que terão entre linha 1.8.</p>
-				
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
+			<a href="javascript:" title='6_work' class="next">Parte 6</a>
 		</section>
 
 	</main>
