--- a/olhaquelindo.html
+++ b/olhaquelindo.html
@@ -29,6 +29,17 @@
 			font-style: italic;
 			color: white;
 		}
+		header p {
+			font-family: sans-serif;
+			text-align: center;
+		}
+		p a {
+			text-decoration: none;
+			color: orange;
+			background: whitesmoke;
+			padding: 10px;
+			border-radius: 4px;
+		}
 		#intro {
 			padding: 50px 0px;
 			text-align: center;
@@ -44,7 +55,7 @@
 			height: 200px;
 			width: 200px;
 		}
-		p {
+		#intro p {
 			max-width: 700px;
 			margin: 0 auto;
 			text-align: left;
@@ -74,6 +85,9 @@
 <header>
 	<h1>Nome da minha biografia</h1>
 	<h4>Escrita por mim</h4>
+	<p>
+		<a href="#intro">Ver resumo</a>
+	</p>
 </header>
 
 <section id="intro">
