changed from AULA 1 to PARTE 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<main>
 		<section class="first">
 			<div class="content">
-				<h1>table of contents</h1>
+				<h1>conteúdos da aula</h1>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -24,17 +24,17 @@
 		<code>
 			<span class="tag">HTML:</span>
 			<br>
-			<a href="javascript:" title="1_html" class="property table-link">Aula 1</a>
-			<a href="javascript:" title="2_html" class="property table-link">Aula 2</a>
+			<a href="javascript:" title="1_html" class="property table-link">Parte 1</a>
+			<a href="javascript:" title="2_html" class="property table-link">Parte 2</a>
 			<br><br>
 			<span class="tag">Hyperlinks:</span>
 			<br>
-			<a href="javascript:" title="3_links" class="property table-link">Aula 3</a>
+			<a href="javascript:" title="3_links" class="property table-link">Parte 3</a>
 			<br><br>
 			<span class="tag">CSS:</span>
 			<br>
-			<a href="javascript:" title="4_css" class="property table-link">Aula 4</a>
-			<a href="javascript:" title="5_css" class="property table-link">Aula 5</a>
+			<a href="javascript:" title="4_css" class="property table-link">Parte 4</a>
+			<a href="javascript:" title="5_css" class="property table-link">Parte 5</a>
 			<br><br>
 			<span class="tag">Apoio:</span>
 			<br>
