Text revisions on 1_html

--- a/1_html/index.html
+++ b/1_html/index.html
@@ -13,7 +13,7 @@
 	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
-		<a class="prev" title="1_html" href="javascript:" style="display: none;"></a>
+			<a class="prev" title="1_html" href="javascript:" style="display: none;"></a>
 			<div class="content">
 				<h1>Agradecimentos</h1>
 			</div>
@@ -22,7 +22,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Essas aulas foram montadas por nós (Hudson e André) mas com auxílio de um guia feito por Shay Howe. Thanks Shay 👍</p>
+				<p>Essas aulas foram montadas a partir do conteúdo nas aulas montadas pelo Shay Howe. Thanks Shay 👍</p>
 				<img src="https://www.thatconference.com/cloud/profilephotos/Shay-Howe-72a38ea3-9dc6-4312-bdea-0201ef408119.png" style="width: 40%; height: 40%; display: block; border-radius: 50%; margin-top: 40px;">
 			</div>
 			<div class="up"><span>↑</span></div>
@@ -38,7 +38,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>O HTML dá ao conteúdo do seu site estrutura e significado definindo esse conteúdo como cabeçalhos, parágrafos, menus, rodapés, images, links, etc...</p>
+				<p>O HTML dá ao conteúdo do seu site estrutura e significado definindo esse conteúdo como em cabeçalhos, parágrafos, menus, rodapés, imagens, links, etc...</p>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -53,7 +53,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Enquanto estiver começando a trabalhar com HTML, pode ser que encontre alguns termos novos e estranhos. Com o tempo você vai acabar se tornando familiar com eles, então não se preocupe que vai ficando mais fácil depois 😊</p>
+				<p>De início, pode ser que você encontre termos estranhos ao estudar HTML. Mas não se preocupe, com o tempo eles se tornam familiares e tudo fica mais fácil 😊</p>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -68,7 +68,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Elementos são designadores que definem a estrutura e conteúdo dos objetos na páginas. Alguns dos mais usados são <em>headings</em>, <em>parágrafos</em>, <em>spans</em> e <em>divs</em>. Elementos são identificados com tags</p>
+				<p>Elementos são o que definem a estrutura e conteúdo dos elementos nas páginas. Alguns dos mais usados são <em>headings</em>, <em>parágrafos</em>, <em>spans</em> e <em>divs</em>. Elementos são identificados com tags</p>
 				<code>
 					<span class="tag">&lt;a&gt;</span>
 				</code>
@@ -87,7 +87,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>O uso de &lt; &gt;, ao redor do elemento, define uma <em>tag</em>. Tags, geralmente, são compostas por um par de abertura e fechamento.</p>
+				<p>O uso de &lt; &gt; ao redor do elemento define uma <em>tag</em>. Em sua maioria, tags são compostas por um par de &lt; &gt;. Um para abertura e outro para fechamento.</p>
 				<p>A abertura de tag marca o começo daquele elemento. Composta de [menor que] + [nome do elemento] + [maior que]</p>
 				<p>O fechamento de tag encerra esse mesmo elemento. É composto de [menor que] + [barra] + [nome do elemento] + [maior que]</p>
 				<p>Tudo que for escrito dentro dessas tags será o conteúdo dela, então, para criar uma tag de link (a), escreve-se:</p>
@@ -108,12 +108,12 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Atributos são propriedades usadas para dar informações adicionais sobre o elemento. Os mais comuns são:
-				<br>
-				<br><em>id</em>: Identificam um elemento;
-				<br><em>class</em>: Classificando um elemento;
-				<br><em>src</em>: Procuram a fonte (source) que vai ser embutida no elemento;
-				<br><em>href</em>: Referem-se a hyperlinks locais ou externos.
+				<p>Atributos dão informações adicionais ao elemento. Os mais comuns são:
+					<br>
+					<br><em>id</em>: Identificam um elemento;
+					<br><em>class</em>: Classificam um elemento;
+					<br><em>src</em>: Procuram a fonte (source) que vai ser embutida no elemento;
+					<br><em>href</em>: Referem-se a hyperlinks locais ou externos.
 				</p>
 				<code>
 					<span class="tag">&lt;a</span>
@@ -135,11 +135,11 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Todos os documentos HTML precisam ter uma estrutura obrifatória que inclui as seguites declarações e elementos:</p>
+				<p>Todos os documentos HTML precisam ter uma estrutura inicial obrigatória, que inclui as seguintes declarações e elementos:</p>
 				<code>
-					<span class="tag">&lt;!DOCTYPE html></span>, <span class="tag">&lt;html></span>, <span class="tag">&lt;head></span>, and <span class="tag">&lt;body></span>
+					<span class="tag">&lt;!DOCTYPE html&gt;</span>, <span class="tag">&lt;html&gt;</span>, <span class="tag">&lt;head&gt;</span>, and <span class="tag">&lt;body&gt;</span>
 				</code>
-				<p>A primeira linha de todo documento HTML deve declarar o tipo de documento para que o browser saiba o que precisa ler. Se a versão for a última basta &lt;!DOCTYPE html>, senão podemos declarar a versão e depois disso, abrimos a tag &lt;html>.</p>
+				<p>A primeira linha de todo documento HTML deve declarar o tipo de documento para que o browser saiba o que precisa ler. Se a versão for a última (HTML 5, no caso), basta &lt;!DOCTYPE html&gt;. Caso contrário, precisamos declarar a versão e depois disso, abrimos a tag &lt;html&gt;</p>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -154,7 +154,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Dentro do &lt;html>, primeiro criamos o elemento &lt;head> (cabeça). Tudo que vai dentro dessa tag não aparece na página propriamente dita. As informaçoes que são colocadas aqui são adicionais para a página: Título (que fica na barra do navegador), metadados que ajudam a encontrar a página e links de arquivos externos, como .css e .js, por exemplo.</p>
+				<p>Dentro do &lt;html>, primeiro criamos o elemento &lt;head> (cabeça). Tudo que vai dentro dessa tag não aparece na página propriamente dita. As informações que são colocadas aqui são adicionais para a página: Título (que fica na barra do navegador); metadados, que ajudam a encontrar a página; e links de arquivos externos, como .css e .js, por exemplo.</p>
 				<p>Todo conteúdo que é visível na página está dentro do &lt;body> (corpo). Isso inclui títulos, parágrafos, tabelas, imagens, menus e outros elementos.</p>
 			</div>
 			<div class="up"><span>↑</span></div>
@@ -170,7 +170,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Nem todas as tags que são usadas precisam de encerramento, algumas delas têm todo conteúdo necessário apenas nos atributos ou nem precisam disso também. As mais comuns entre as self-closing são:</p>
+				<p>Nem todas as tags precisam de encerramento. Algumas delas têm seu conteúdo apenas nos atributos (ou nem isso). As self-closing mais comuns são:</p>
 				<code>
 					Dentro do <span class="tag">&lt;head&gt;</span>
 					<br>
@@ -203,23 +203,23 @@
 					<span class="tag">&lt;!DOCTYPE html></span>
 					<br><span class="tag">&lt;html</span> <span class="attribute">lang="</span></span><span class="value">en</span><span class="attribute">"</span><span class="tag">></span>
 					<br><span class="tag">&lt;head></span>
-					    <br><span class="tag">&lt;meta</span> <span class="attribute">charset="</span><span class="value">utf-8</span><span class="attribute">"</span><span class="tag">></span>
-					    <br><span class="tag">&lt;title></span>Hello World<span class="tag">&lt;/title></span>
-					  <br><span class="tag">&lt;/head></span>
-					  <br><span class="tag">&lt;body></span>
-					    <br><span class="tag">&lt;h1></span>Hello World<span class="tag">&lt;/h1></span>
-					    <br><span class="tag">&lt;p></span>Aula linda do André e do Hudson 😍<span class="tag">&lt;/p></page>
-					  <br><span class="tag">&lt;/body></span>
+					<br><span class="tag">&lt;meta</span> <span class="attribute">charset="</span><span class="value">utf-8</span><span class="attribute">"</span><span class="tag">></span>
+					<br><span class="tag">&lt;title></span>Hello World<span class="tag">&lt;/title></span>
+					<br><span class="tag">&lt;/head></span>
+					<br><span class="tag">&lt;body></span>
+					<br><span class="tag">&lt;h1></span>Hello World<span class="tag">&lt;/h1></span>
+					<br><span class="tag">&lt;p></span>Aula linda do André e do Hudson 😍<span class="tag">&lt;/p></page>
+					<br><span class="tag">&lt;/body></span>
 					<br><span class="tag">&lt;/html></span>
-					</pre>
-				</code>
-				<a href="exemplo.html">exemplo</a>
+				</pre>
+			</code>
+			<a href="exemplo.html">exemplo</a>
 
-				<a href="javascript:" title='2_html' class="next">Parte 2</a>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-	</main>
+			<a href="javascript:" title='2_html' class="next">Parte 2</a>
+		</div>
+		<div class="up"><span>↑</span></div>
+		<div class="down"><span>↑</span></div>
+	</section>
+</main>
 </body>
 </html>
