--- a/2_html/index.html
+++ b/2_html/index.html
@@ -9,11 +9,11 @@
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src="../js/scroll.js"></script>
 	<script>
-	  	function play(){
-	       var audio = document.getElementById("audio");
-	       audio.play();
-	    }
-   </script>
+		function play(){
+			var audio = document.getElementById("audio");
+			audio.play();
+		}
+	</script>
 </head>
 <body>
 	<div class="lock-scroll lock"></div>
@@ -28,8 +28,8 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Elementos <em>block</em> começam em uma nova linha, ocupam toda a largura disponível e vão se empilhando um em cima do outro conforme são inseridos, como os parágrafos dessa apresentação. Eles podem ser parágrafos, divs, sections, navs, headers, artciles e outros.</p>
-				<p>Elementos block também podem estar inseridos dentro de outro block:</p>
+				<p>Elementos <em>block</em> ocupam toda a largura disponível da tela e se empilham um em cima do outro conforme são inseridos, como os parágrafos dessa apresentação. Elementos block podem ser parágrafos, divs, sections, navs, headers, articles e outros.</p>
+				<p>Elementos block também podem estar inseridos dentro um do outro:</p>
 				<br>
 				<div style="border: 1px solid #000; padding: 10px; width: 100%;">
 					elemento block
@@ -51,8 +51,9 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Elementos <em>inline</em> não começam em uma nova linha. Eles seguem o fluxo normal e vão se alinhando um ao lado do outro ocupando apenas a largura do seu próprio conteúdo. Esses elementos podem estar um dentro do outro e dentro de um elemento block. </p>
-				<p>lComumente usamos inline para destacar algumas palavras com sublinhados, negritos, itálicos ou com cores diferentes.</p>
+				<p>Elementos <em>inline</em> ocupam, na página, o espaço de seus conteúdos. Ao contrário dos <em>block</em>, que ocupam a largura toda, os inline vão se alinhando um ao lado do outro. Eles podem estar tanto um dentro do outro quanto dentro de um elemento block.
+				</p>
+				<p>É comum usarmos elementos inline para dar destaque a algumas palavras, com sublinhados, negritos, itálicos ou com cores diferentes.</p>
 				<br>
 				<div style="border: 1px solid #000; padding: 10px; width: 100%;"><span>Elemento inline que tem um <span style="color: red;">elemento inline</span> dentro dele e os dois estão dentro de um elemento block que agrupa os dois.</span></div>
 				
@@ -71,8 +72,7 @@
 
 		<section>
 			<div class="content">
-				<p>Semântica, no HTML, é a prática de dar significado e estrutura aos elementos da página. Existem muitos benefícios nesse uso, incluindo habilitar devices a lerem seu código da forma mais adequada, por exemplo, um leitor de feed, pode pegar o seu primeiro <span class="tag">&lt;h1></span> e o seu primeiro <span class="tag">&lt;p></span> para montar um preview do conteúdo.</p>
-				<p>Além disso, HTML semântico facilita a leitura do código e possíveis retrabalhos.</p>
+				<p>Semântica, no HTML, é a prática de dar significado aos elementos da página. Dos benefícios existentes ao trabalhar seu código de modo semântico, os principais são: possibilitar que devices leiam seu código para, por exemplo, mostrarem a prévia de um texto num feed ou permitir que softwares de acessibilidade leiam, literalmente, sua página para deficientes visuais; e facilitar a leitura do próprio código por outros desenvolvedores (evitando o retrabalho).</p>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -87,9 +87,9 @@
 		</section>
 		<section>
 			<div class="content">
-				<p><em>Divs</em> e <em>Spans</em> são dois elementos essenciais para qualquer código HTML mas, ao contrário dos outros, eles não tem nenhum valor semântico, então, servem apenas como containers para serem estilizados.</p>
+				<p><em>div</em> e <em>span</em> são dois elementos essenciais para qualquer código HTML. Mas eles não tem nenhum valor semântico e sua função é a apenas a de containers para outros elementos.</p>
 				<p>Por exemplo, <em>parágrafos</em> são colocado dentro da tag <span class="tag">&lt;p></span> e títulos são colocados nas tags <span class="tag">&lt;h1></span> até <span class="tag">&lt;h6></span> por serem <em>headings</em>.</p>
-				<p>Divs são elementos block e Spans são elementos inline.</p>
+				<p><em>div</em> é um elemento block e <em>span</em>, inline.</p>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -144,7 +144,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Uma das boas práticas mais apoiada diz que as classes e os ids devem ser nomeados em relação à função e não à aparência. Ou seja, se formos criar uma <span class="tag">div</span> com fundo azul para as redes sociais, escreveríamos:</p>
+				<p>Uma das metodologias mais disseminadas diz que as classes e os ids devem ser nomeados em relação à função que os elementos cumprem, e não à sua aparência. Ou seja, se formos criar uma <span class="tag">div</span> com fundo azul para as redes sociais, escreveríamos:</p>
 				<code>
 					<span class="tag">&lt;div</span>
 					<span class="attribute">class="</span><span class="value">social</span><span class="attribute">"</span><span class="tag">&gt;</span> facebook | twitter <span class="tag">&lt;/div&gt;</span>
@@ -170,7 +170,7 @@
 		<section>
 			<div class="content">
 				<p>Por muito tempo o único jeito de contruir páginas era com <span class="tag">&lt;div></span> e isso ainda é possível, porém, é semânticamente prejudicial.</p>
-				<p>Com a atualização do HTML 5 foram criados alguns novos elementos block que tem a mesma função de uma div, mas com nomes melhores.</p>
+				<p>Com a atualização do HTML 5 foram criados alguns novos elementos block, que têm a mesma função de uma div, mas são mais semânticos.</p>
 				<br>
 				<p><em>Header</em>: usado para topos de páginas ou seções.</p>
 				<p><em>Nav</em>: identifica navegações principais (menu).</p>
@@ -179,13 +179,13 @@
 				<p><em>Aside</em>: para sidebars ou curtas explicações (autor do texto)</p>
 				<p><em>Footer</em>: autoexplicativo</p>
 
-				</p>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-			<a href="javascript:" title='3_links' class="next">Parte 3</a>
-		</section>
+			</p>
+		</div>
+		<div class="up"><span>↑</span></div>
+		<div class="down"><span>↑</span></div>
+		<a href="javascript:" title='3_links' class="next">Parte 3</a>
+	</section>
 
-	</main>
+</main>
 </body>
 </html>
