Text changes in 2_html

--- a/2_html/index.html
+++ b/2_html/index.html
@@ -87,7 +87,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p><em>div</em> e <em>span</em> são dois elementos essenciais para qualquer código HTML. Mas eles não tem nenhum valor semântico e sua função é a apenas a de containers para outros elementos.</p>
+				<p><em>div</em> e <em>span</em> são dois elementos essenciais para qualquer código HTML. Mas eles não tem nenhum valor semântico e servem como containers para outros elementos.</p>
 				<p>Por exemplo, <em>parágrafos</em> são colocado dentro da tag <span class="tag">&lt;p></span> e títulos são colocados nas tags <span class="tag">&lt;h1></span> até <span class="tag">&lt;h6></span> por serem <em>headings</em>.</p>
 				<p><em>div</em> é um elemento block e <em>span</em>, inline.</p>
 			</div>
