--- a/olhaquelindo.html
+++ b/olhaquelindo.html
@@ -3,110 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Biografia</title>
-	<style>
-		html, body {
-			height: 100%;
-			margin: 0px;
-		}
-		header {
-			padding: 10px;
-			box-sizing: border-box;
-			background: url(https://hd.unsplash.com/photo-1445877156333-befcf3e25f07) no-repeat fixed bottom center;
-			background-size: cover;
-			height: 100%;
-		}
-		h1 {
-			font-size: 130px;
-			color: white;
-			font-family: sans-serif;
-			line-height: 1;
-			margin: 80px 0px 20px 0px;
-		}
-		h4 {
-			font-family: serif;
-			font-size: 20px;
-			font-weight: normal;
-			font-style: italic;
-			color: white;
-		}
-		header p {
-			font-family: sans-serif;
-			text-align: center;
-		}
-		p a {
-			text-decoration: none;
-			color: orange;
-			background: whitesmoke;
-			padding: 10px;
-			border-radius: 4px;
-		}
-		#intro {
-			padding: 50px 0px;
-			text-align: center;
-			background: #17171F;
-			color: #ccc;
-		}
-		h2 {
-			font-size: 50px;
-		}
-		.foto {
-			border-radius: 300px;
-			filter: brightness(100%);
-			height: 200px;
-			width: 200px;
-		}
-		#intro p {
-			max-width: 700px;
-			margin: 0 auto;
-			text-align: left;
-			font-size: 18px;
-			line-height: 1.5;
-			font-family: sans-serif;
-			margin-bottom: 20px;
-		}
-		h3 {
-			margin-top: 50px;
-		}
-		img {
-			filter: brightness(10000%);
-			width: 40px;
-			height: auto;
-		}
-		footer {
-			background: #ccc;
-			color: #1e1e1e;
-			padding: 50px 0px;
-			text-align: center;
-		}
-	</style>
+	<link rel="stylesheet" href="olhaquelindo.css" type="text/css">
 </head>
 <body>
 
-<header>
+<section class="top">
 	<h1>Nome da minha biografia</h1>
-	<h4>Escrita por mim</h4>
-	<p>
-		<a href="#intro">Ver resumo</a>
-	</p>
-</header>
-
-<section id="intro">
-	<img class="foto" src="http://fillmurray.com/200/200" alt="">
-	<h2>"Decidi escrever essa biografia pra mostrar a todos como eu aprendi várias coisas na aula de hoje"</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laudantium voluptates perferendis odit in eligendi eos laboriosam est ratione nesciunt reiciendis doloremque quis soluta ex suscipit architecto, provident ut molestias.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laudantium voluptates perferendis odit in eligendi eos laboriosam est ratione nesciunt reiciendis doloremque quis soluta ex suscipit architecto, provident ut molestias.</p>
-	<h3>
-		Me siga nas redes sociais:
-	</h3>
-	<a href="http://twitter.com"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_circle_color-256.png" alt=""></a>
-	<a href="http://twitter.com"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" alt=""></a>
-	<a href="http://twitter.com"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/instagram_circle_color-256.png" alt=""></a>
-	<a href="http://twitter.com"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/google_circle_color-256.png" alt=""></a>
+	<h2>Escrita por mim
+		<span>PATRICIA</span>
+	</h2>
 </section>
-
-<footer>
-	Todos os direitos reservados
-</footer>
 
 	
 </body>
