added names of the guys

--- a/ciencia/index.html
+++ b/ciencia/index.html
@@ -26,8 +26,11 @@
 			O ciência em show
 		</h2>
 		<img src="img/wilson-circle.png" alt="">
+		<h3>Wilson</h3>
 		<img src="img/gerson-circle.png" alt="">
+		<h3>Gerson</h3>
 		<img src="img/daniel-circle.png" alt="">
+		<h3>daniel</h3>
 		<p>Como professores da área, os físicos Wilson, Gerson e Daniel se especializaram na popularização da ciência, tecnologia e inovação e são ativos incentivadores do conhecimento e da educação no Brasil. Juntos, os três cientistas representam o desenvolvimento da ciência: a pergunta, a prática e a teoria.</p>
 	</section>
 	<section>
